# AgenteFinanceiro

./: README.md  analise.md  noticias.md  pyproject-old.toml  pyproject.toml  relatorio.md
src/analista_financeiro/: analyze_data.py  crew.py  fetch_data.py  main.py  visualize_data.py
src/analista_financeiro/config/: agents.yaml  tasks.yaml
src/analista_financeiro/tools/: custom_tool.py
