[project]
name = "analista_financeiro"
version = "0.1.0"
description = "analista_financeiro using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.28.8",
    "pandas>=1.3.5",
    "numpy>=1.21.4",
    "matplotlib>=3.5.1",
    "yfinance>=0.1.70",
    "markdown2>=2.4.0",
]

[project.scripts]
analista_financeiro = "analista_financeiro.main:run"
run_crew = "analista_financeiro.main:run"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
