[tool.poetry]
name = "analista_financeiro"
version = "0.1.0"
description = "analista_financeiro using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = {extras = ["tools"], version = ">=0.28.8"}
pandas = ">=1.3.5"
numpy = ">=1.21.4"
matplotlib = ">=3.5.1"
yfinance = ">=0.1.70"
markdown2 = ">=2.4.0"

[tool.poetry.scripts]
analista_financeiro = "analista_financeiro.main:run"
run_crew = "analista_financeiro.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"